assets/css/style.css
@charset "utf-8";
/* ==========================================================================
   1. CSS Reset Code
   ========================================================================== */

/* 1.1. Eric Meyers Reset
   http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
   ========================================================================== */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure,
figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

/* Force scrollbar */
html { overflow-y: scroll; }

/* Align radios and text inputs with their label */

input[type='radio'] { vertical-align: text-bottom; }

/* Hand cursor on clickable input elements */
label,
input[type='button'],
input[type='submit'],
button {
  cursor: pointer;
}

strong {
  font-weight: bold;
  font-family: inherit;
  font-size: inherit;
}

em { font-style: italic; }

img {
  width: 100%;
  border: 0;
  vertical-align: middle;
}

sub,
sup {
  vertical-align: baseline;
  position: relative;
  font-size: 55%;
  line-height: 0;
}

sup { top: -.7em; }
sub { bottom: -.25em; }

/* 1.2. Clear Fix
   ========================== */

.cf:before,
.cf:after {
  display: table;
  content: " ";
}

.cf:after { clear: both; }
.cf { *zoom: 1; }

/*for all*/
body {
  box-sizing: border-box;
  font-family: sans-serif;
}

a { 
  display: inline-block;
  text-decoration: none; 
}

li {
  display: inline-block;
  list-style-type: none;
}

/*for wrapper*/
.wrapper {
  max-width: 1903px;
  width: 96%; 
  margin: 0 0 0 auto;
}
/*=================================
  Header styling starts here
=================================*/
header>div>h1{
  margin-top: 35px;
  margin-bottom: 37px;
}
header{
  border-bottom: 2px solid #b9b9b9;
}
.brand-name > a{
  text-indent: -9999px;
}
.brand-name > a >img{
  float:right;
}



/*=================================
  Header styling ends here
=================================*/  

/*=================================
  main styling starts here
=================================*/
.job-profile-name{
  margin-top: 58px;
/* margin-top: 72px; */
font-weight: bold;
    font-size: 47px;
    color:#6069ce;
}
.job-location{
  margin-top: 13px;
  font-size: 34px;    
  color:#6069ce;
}
.job-review{
  margin-top: 40px;
  font-size: 36px;
  color:#6069ce;
}
.job-desc{
  margin-top: 27px;
  font-size: 29px;
  color:#6069ce;
}
.job-desc>a{
  color:#52bd97;
}
.apply-btn,
.connect-btn{
  padding: 26px 28px;
  font-size: 38px;
  text-transform: uppercase;
  background-color: #44c79d;
  color:white;
  letter-spacing: -2px;
  border-radius: 5px;
}
.job-profile-section>div{
  border-bottom: 2px solid #b9b9b9;
  display: flex;
  justify-content: space-between;

}
.job-profile-left{
  flex-basis:64.55%;
  display: inline-block;
/* margin-right: 2.52%; */
}
.job-profile-left >a:first-of-type{
  margin-top: 48px;
}
.job-profile-right{
  flex-basis: 32.93%;
  display: inline-block;
  background-color: #6069d0;
  position: relative;
}
.referrals-info{
  /* margin-top: 111px;
  margin-bottom: 111px;
  margin-left: 118px;
  margin-right: 126px; */
  /* margin:111px 126px 111px 118px; */
  /* margin: 18.14% 20.82% 18.14% 19.5%; */
  margin: 21.14% 20.82% 18.14% 19.5%;
  
}
.referral-slider-dots{
  /* margin: 111px 126px 111px 118px; */
  margin: 139px 126px 54px 118px;
    width: 29.18%;
    margin-left: auto;
    margin-right: auto;
}
.referral-slider-dots>span{
  margin-left: 3%;
}
.referral-slider-dots>span:nth-of-type(1)
{
margin-left: 0;
}
.referral-slider-dots>span::nth-of-type(6){
  margin-right: 0;
}

.hr-slider-item p{
  font-size: 32px;  
  line-height: 50px;
  letter-spacing: -2px;
}
.hr-slider-item p > span{
  font-size: 53px;
}
.hr-slider-item{
  color: #f2f5fc;
}
.hr-slider li:not( :nth-of-type(1))
{
  display: none;
}
.dot{
height: 21px;
width: 21px;
background-color: #c5c7c6;
border-radius: 50%;
display: inline-block;
}

.white-dot{
  background-color: white;
}
.but-text{
  margin-bottom: 19px;
  margin-top: 19px;
  position: relative;
  text-align: center;
}

.but-text:before {
  content: "";
  display: block;
  width: 38.33%;
  height: 2px;
  background: white;
  left: 0;
  top: 50%;
  position: absolute;
}
.but-text:after {
  content: "";
  display: block;
  width: 38.33%;
  height: 2px;
  background:white;
  right: 0;
  top: 50%;
  position: absolute;
}

.job-profile-right > a{
  font-size: 30px;
  cursor: pointer;
  position: absolute;
  top: 50%;
  padding: 16px;
  color:white;

}
.job-profile-right > a:last-child{
  right: 0;
}
.applicants-icons{
  margin-top: 16px;
}
.applicants-icons>i{
  font-size: 48px;
}
.referral-applicants-icons{
  margin-top:13px;
}
.referral-applicants-icons>i{
  font-size: 48px;
}

.connect-insider-title{
  margin-top: 61px;
  margin-bottom: 62px;
  font-size: 50px;
  font-weight: bold;
  color: #6069ce;
}
.insiders-info-item>figure>img{
  width: auto;
}
.insider-name{
  margin-top: 23px;
  margin-bottom: 15px;
  font-size: 33px;
  color: #44c79d;
  letter-spacing: -2px;
}
.insider-profile{
  margin-bottom: 23px;
  font-size: 24px;
  color: #727272;
  letter-spacing: -2px;
}
.fa-star ,
.fa-star-o
{
  font-size: 27px;
  color: #6169cf;
}
.insider-responce-time{
  margin-top: 23px;
  font-size: 20px;
  color:#a2a2a2;
}
.insiders-info{
  margin-left: 5.46%;
  margin-right: 9.28%;
  display: flex;
  justify-content: space-between;
}
.insiders-info-item{
  flex-basis: 17.85%;
}
.insider-section>div{
  border-bottom: 2px solid #b9b9b9;
}
.insiders-info-item:nth-of-type(2)
{
    margin-bottom: 66px;
}
.how-we-work-title{
  margin-top: 61px;
  margin-bottom: 61px;
  font-size: 50px;
  font-weight: bold;
  color: #6069ce;

}
.how-we-work{
  margin-left: 5.34%;
  margin-right: 9.1%;
  margin-bottom: 66px;
  display: flex;
  justify-content: space-between;
}
.fa-search,
.fa-calendar,
.fa-comments{
  /* text-align: center; */
  font-size: 70px;
    display: inline-block;
    color: white;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.how-we-work-item{
  flex-basis:28.42%;
}
.how-we-work-item > h4{
  margin-top: 34px;
  margin-bottom: 25px;
  font-size: 36px;
  color: #747474;
  
}
.how-we-work-item > p{
  font-size: 29px;
  color: #a2a2a2;
}
.testimonials-section{
  background-color: #6069d0;
}
.testimonials-inner{
  width: 100%;
  position: relative;
}
.testimonials-inner > a{
  font-size: 30px;
    cursor: pointer;
    position: absolute;
    top: 50%;
    padding: 16px;
    color: white;
   }
   .testimonials-inner >a :last-child{
    right: 0;
   }
   .testimonials-inner > h2{
    padding-top: 55px;
    margin-bottom: 51px;
    font-size: 50px;
    font-weight: bold;
    color: #fffffe;
   }
   .testimonials-item > p{
    font-size: 27px;
   }
   .testimonials-item > p{
     color:#f8fbfd;
     text-align: center;
    width: 85.16%;
    margin: 0 auto;
   }
   .testimonials-item:not(:first-of-type){
     display: none;
   }
   .current-testimonial{
    margin-top: 47px;
    padding-bottom: 67px;
    text-align: center;
   }
   .search-ico,
   .calendar-ico,
   .comments-ico{
    display: inline-block;
    background: #6069ce;
    width: 129px;
    height: 129px;
    /* text-align: center; */
    /* vertical-align: middle; */
    border-radius: 50%;
    /* margin: 0 auto; */
    /* top: 50%; */
    position: relative;
   }
/*=================================
  main styling ends here
=================================*/

/*=================================
  footer styling starts here
=================================*/ 







 /*=================================
  footer styling ends here
=================================*/ 

/*media query starts*/
/*media query for 995px starts here*/
@media only screen and (max-width: 1024px) {
h2{
  font-size: 38px;
}
p{
  font-size: 25px;
}
.apply-btn, .connect-btn {
  padding: 13px 14px;
  font-size: 19px;
  letter-spacing: -2px;
}
.hr-slider-item p {
  font-size: 29px;
  letter-spacing: -2px;
  /* line-height: 50px; */
}
.insider-name {
font-size: 22px;
letter-spacing: -2px;
}
.insiders-info-item>figure>img {
  width: 70%;
}
.insiders-info-item {
  flex-basis: 46.85%;
}
.how-we-work-item > p {
  font-size: 18px;
  color: #a2a2a2;
}
.how-we-work-item > h4 {
  margin-top: 20px;
  font-size: 27px;
  color: #747474;
  margin-bottom: 20px;
}

.insider-profile {
  margin-bottom: 7px;
  font-size: 19px;
  color: #727272;
  letter-spacing: -2px;
}
.insider-responce-time {
  width: 80%;
}
.fa-search, .fa-calendar, .fa-comments {
  font-size: 71px;
}
.dot {
  height: 10px;
  width: 10px;
}
.applicants-icons>i {
  font-size: 26px;
}
.referral-applicants-icons>i {
  font-size: 26px;
}
}  

